reorganized styling and worked on overflow issues

--- a/assets/styles/button.css
+++ b/assets/styles/button.css
@@ -7,8 +7,6 @@ button {
     gap: 0.625rem;
     flex-shrink: 0;
     border-radius: 0.625rem;
-    background: var(--primary-color);
-    color: var(--secondary-color);
     min-width:100px;
     margin: 10px;
 }
@@ -16,8 +14,6 @@ button {
 button:active {
     animation-timing-function: ease-in-out;
     animation-duration: 300ms;
-    background-color: var(--secondary-color) ;
-    color: #56B6AE;
 }
 
 section#calendar button {
