--- a/assets/styles/form.css
+++ b/assets/styles/form.css
@@ -1,11 +1,20 @@
 /* Styling for the booking form */
 
+#pre-booking {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 2.25rem;
+    flex-wrap: wrap;
+}
+
 section#hotel-booking {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2.3125rem;
-    width: fit-content;
+    width: 50%;
     height: fit-content;
 }
 
@@ -13,6 +22,12 @@ section#hotel-booking {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    width: 100%;
+}
+
+fieldset legend {
+    width:auto;
+    display: inline-block;
 }
 
 input {
@@ -22,7 +37,6 @@ input {
     align-items: flex-start;
     gap: 0.625rem;
     align-self: stretch;
-    /* color: #B8BCCA; */
     font-family: Inter;
     font-size: 1rem;
     font-style: normal;
@@ -30,14 +44,26 @@ input {
     line-height: normal;
 }
 
-fieldset {
-    width: 400px;
-    border: 1px solid var(--primary-color);
+input.feature {
+    width: 20px;
+    height: 20px;
+    margin: 1rem;
 }
 
-legend {
-    color: var(--secondary-color);
+input label {
+
 }
+
+fieldset {
+    max-width: 100%;
+    overflow: scroll;
+}
+
+fieldset * {
+    width: 100%;
+}
+
+
 
 section#hotel-booking button {
     margin:auto;
@@ -59,6 +85,7 @@ select {
 
 .checkbox {
     display: flex;
+    align-items: center;
 }
 
 /* Styling for the ATM form */
@@ -80,9 +107,7 @@ section#atm p, section#atm h2 {
     text-align: center;
 }
 
-p.withdrawal {
-    border: 2px solid var(--primary-color);
-}
+
 
 .error {
     display: flex;
@@ -91,7 +116,5 @@ p.withdrawal {
     width:200px;
     height: fit-content;
     padding: 1rem;
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
     text-align: center;
 }
