--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -12,10 +12,30 @@
     box-sizing: border-box;
     margin: 0;
     border: 0;
+    /* border: red solid 1px; */
+    overflow-x: scroll;
 }
 
 body {
-    background-color: var(--white);
-    font-family: 'Inter';
     width:100%;
+}
+
+hr {
+    border: 2px solid;
+}
+
+main {
+    display: flex;
+    max-width: min(90%, 1200px);
+    padding: 4rem 4rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    margin: auto;
+}
+
+
+hr {
+    width:40%;
+    margin: auto;
 }
