--- a/assets/styles/rooms.css
+++ b/assets/styles/rooms.css
@@ -8,19 +8,17 @@ section#hotel-rooms-description {
 #hotel-rooms-description article {
     display: flex;
     width: 80%;
-    height: 32.1875rem;
+    height: fit-content;
     padding: 2.5rem;
     justify-content: center;
     align-items: center;
     gap: 0.625rem;
-    background: #EABCBC;
     margin: auto;
 }
 
 #hotel-rooms-description img {
     width: 40%;
-    height: 26.8125rem;
+    height: 26rem;
     flex-shrink: 0;
-    background-color: aquamarine;
     object-fit: cover;
 }
