--- a/assets/styles/typography.css
+++ b/assets/styles/typography.css
@@ -1,3 +1,11 @@
+body {
+    font-family: var(--text-font);
+}
+
+nav {
+    font-family: var(--text-header);
+}
+
 h1 {
     font-family: var(--text-font);
 }
